test/good/generics/complex03.px

func f<T>(x: T): [T] def
    y: T = x*2
    a: [T]
    a = [x, y]
    return a

print f(1)[0] + f(2.3)[1]
